compiler/tests/fixtures/invalid/semantics/rename_without_join_roles.viv
// Invalid: action renames role without 'join roles'

template action base:
    roles:
        @actor:
            as: initiator
        @friend:
            as: partner

action child from base:
    roles:
        @buddy:
            renames: @friend
